kubernetes-main/k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: vscamsniffer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      nodeSelector:
        agentpool: gpunode  # GPU 노드에서 실행
      containers:
      - name: django-app
        image: vscamacr.azurecr.io/django-app:latest
        ports:
        - containerPort: 9090  # 기존 8000 → 9090으로 변경
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: vscamsniffer
spec:
  selector:
    app: django-app
  ports:
  - protocol: TCP
    port: 9090   # 기존 8000 → 9090으로 변경
    targetPort: 9090
  type: ClusterIP
