kubernetes-main/k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: vscamsniffer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: vscamacr.azurecr.io/fastapi-app:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: vscamsniffer
spec:
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
